Repair collapsed column style in Kanban page

--- a/app/styles/modules/kanban/kanban-table.scss
+++ b/app/styles/modules/kanban/kanban-table.scss
@@ -33,6 +33,9 @@ $column-padding: .5rem 1rem;
             opacity: .8;
             padding: .5rem 0;
             transition: opacity .3s linear;
+            .title {
+                display: none;
+            }
             .option:not(.hunfold),
             span {
                 display: none;
